add index and layout erb files with nav bar

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -15,9 +15,17 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>Stack Overflow</title>
 </head>
 <body>
-  <%= yield %>
+  <nav class="my_nav">
+    <%if login?%>
+       <div class="nav_button"><a href="/users/logout">Logout</a></div>
+    <%else%>
+      <div class="nav_button"><a href="/users/login">Login</a></div>
+      <div class="nav_button"><a href="/users/new">Register</a></div>
+    <%end%>
+  </nav>
+  <%=yield%>
 </body>
 </html>
