finish user/login stuff

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,6 +26,7 @@
       <div class="nav_button"><a href="/users/new">Register</a></div>
     <%end%>
   </nav>
+  <h1>STACK OVERFLOW JUNIOR</h1>
   <%=yield%>
 </body>
 </html>
