--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,6 +26,12 @@
       <div class="nav_button"><a href="/users/new">Register</a></div>
     <%end%>
   </nav>
+  <menu>
+    <div class="menu_button"><a href='/questions'>Questions</a></div>
+    <div class="menu_button"><a href='/tags'>Tags</a></div>
+    <div class="menu_button"><a href='/users'>Users</a></div>
+    <div class="menu_button"><a href='/questions/new'>Ask A Question</a></div>
+  </menu>
   <h1>STACK OVERFLOW JUNIOR</h1>
   <%=yield%>
 </body>
