--- a/app/views/comments/new.erb
+++ b/app/views/comments/new.erb
@@ -1,4 +1,4 @@
-<form id="add-comment" method="post" action="/questions/<%=@question.id%>/comment">
-  comment: <textarea cols="50" rows="10"></textarea>
+<form id="add-comment" method="post" action="/questions/<%=@question.id%>/comments">
+  comment: <textarea name="comment" cols="50" rows="10"></textarea>
   <input type="submit" value="post comment">
 </form>
