--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -4,11 +4,25 @@
     <span class="num-answers">answers:<%=@question.answers.count%></span>
     <span class="num-views">visits:<%=@question.visits%></span>
   </div>
-  <a href="/questions/<%=@question.id%>">
-    <div class="question-text"><h2><%=@question.question%></h2></div>
-  </a>
+  <div class="question-text"><h2><%=@question.question%></h2></div>
   <div class="author"><%=@question.user.username%></div>
   <div class="question-description"><%=@question.description%></div>
+
+  <%if current_user.id == @question.user_id %>
+    <form id="delete-button" action="/questions/<%=@question.id%>" method="post">
+      <input type="hidden" name="_method" value="delete">
+      <input type="submit" value="delete">
+    </form>
+  <%end%>
+
+  <div class="comment-error">
+  <%if @comment_error%>
+    <%@comment_error.each do |error|%>
+      <div class="error">***<%=error%>***</div>
+    <%end%>
+  <%end%>
+  </div>
+
   <form id="new_comment_button" action="/questions/<%=@question.id%>/comments" method="get">
     <input type="submit" value="add comment">
   </form>
@@ -19,6 +33,12 @@
   <div class="comment">
     <span class="author"><%=comment.user.username%></span><br>
     <%=comment.comment%>
+    <%if current_user.id == comment.user_id %>
+      <form id="delete-button" action="/comments/<%=comment.id%>" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <input type="submit" value="delete">
+      </form>
+    <%end%>
   </div>
 </div>
 <%end%>
@@ -28,15 +48,21 @@
  <%@question.answers.each do |answer|%>
     <span class="author"><%=answer.user.username%></span><br>
     <%=answer.answer%>
+    <%if current_user.id == answer.user_id %>
+      <form id="delete-button" action="/answers/<%=answer.id%>" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <input type="submit" value="delete">
+      </form>
+    <%end%>
     <br><br>
   <%end%>
 </div>
  <br>
 
-<div class="errors">
+<div class="answer_error">
   <%if @errors%>
     <%@errors.each do |error|%>
-      <div class="error">***<%=error%>***</div>
+      <div class="error">**<%=error%>**</div>
     <%end%>
   <%end%>
 </div>
