--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
 <h3><%= @user.username %>'s Activity Statistics:</h3>
-<%= @user.answers.length %> Answers<br>
-<%= @user.questions.length %> Questions<br>
+Answers (<%= @user.answers.length %>) <br>
+Questions (<%= @user.questions.length %>) <br>
 
 
 
