--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,7 +1,9 @@
 <div class="add-question">
   <h2>Your Question:</h2>
   <form action="/questions" method="post">
-      <textarea rows="10" cols="50" id="question" name="question"><%=@question_text%></textarea>
+      <div>Question:<textarea rows="2" cols="50" id="question" name="question"><%=@question_text%></textarea></div>
+      <div>Description:<textarea rows="10" cols="50" id="question_description" name="description"><%=@description_text%></textarea></div>
+      <div>Tags:<input type="text" name="tags_list"></div>
     <input type="submit" value="Post Your Question">
   </form>
 </div>
