--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,16 +1,18 @@
-<h3><%=@user.username%>'s Activity Statistics:</h3>
+<div id="user-activity-container">
+  <h3><%=@user.username%>'s Activity Statistics:</h3>
 
-<a href="/users/<%=@user.id%>/answers">Answers (<%=@user.answers.count%>)</a><br>
-<a href="/users/<%=@user.id%>/questions">Questions (<%= @user.questions.count %>)</a><br>
+  <a href="/users/<%=@user.id%>/answers">Answers (<%=@user.answers.count%>)</a><br>
+  <a href="/users/<%=@user.id%>/questions">Questions (<%= @user.questions.count %>)</a><br>
 
-<h3>Post Activity</h3>
+  <h3>Post Activity</h3>
 
-<%@user.questions.each do |question|%>
-  <div><a href="/questions/<%=question.id%>"><%=question.question%></a></div>
-<%end%>
+  <%@user.questions.each do |question|%>
+    <div><a href="/questions/<%=question.id%>"><%=question.question%></a></div>
+  <%end%>
 
-<%@user.answers.each do |answer|%>
-  <div><a href="/questions/<%=answer.question.id%>"><%= answer.question.question %></a></div>
-<%end%>
+  <%@user.answers.each do |answer|%>
+    <div><a href="/questions/<%=answer.question.id%>"><%= answer.question.question %></a></div>
+  <%end%>
+</div>
 
 
