--- a/app/views/_answer.erb
+++ b/app/views/_answer.erb
@@ -1,28 +1,27 @@
-<div class="answer">
-  <%@question.answers.each do |answer|%>
-    <a href="/users/<%=answer.user.id%>"><span class="author"><%=answer.user.username%></span></a>
-    <%=answer.answer%>
+<div class="individual_answer">
+    <a href="/users/<%=@answer.user.id%>"><span class="author"><%=@answer.user.username%></span></a>
+    <%=@answer.answer%>
     <div class="voting">
-      <form id="upvote_button" action="/answers/<%=answer.id%>/upvote" method="post">
+      <form id="upvote_button" action="/answers/<%=@answer.id%>/upvote" method="post">
         <input type="submit" value=&#8657;>
       </form>
-      <div class="vote-stat"><%=(answer.votes.where(upvote:true).count)-(answer.votes.where(upvote:false).count)%></div>
-      <form id="downvote_button" action="/answers/<%=answer.id%>/downvote" method="post">
+      <div class="vote-stat"><%=(@answer.votes.where(upvote:true).count)-(@answer.votes.where(upvote:false).count)%></div>
+      <form id="downvote_button" action="/answers/<%=@answer.id%>/downvote" method="post">
         <input type="submit" value=&#8659;>
       </form>
     </div>
-    <%if login? && current_user.id == answer.user_id %>
-      <form id="delete-button" action="/answers/<%=answer.id%>" method="post">
+    <%if login? && current_user.id == @answer.user_id %>
+      <form id="delete-button" action="/answers/<%=@answer.id%>" method="post">
         <input type="hidden" name="_method" value="delete">
         <input type="submit" value="delete">
       </form>
-      <form id="edit-button" action="/answers/<%=answer.id%>" method="get">
+      <form id="edit-button" action="/answers/<%=@answer.id%>" method="get">
         <input type="submit" value="edit">
       </form>
     <%end%>
     <br>
     <div class="answer-comments">
-      <%answer.comments.each do |comment|%>
+      <%@answer.comments.each do |comment|%>
         <a href="/users/<%=comment.user_id%>"><div class="comment-author"><%=comment.user.username%></div></a>
         <div class="comment-text"><%=comment.comment%></div>
         <%if login? && current_user.id == comment.user_id %>
@@ -36,8 +35,7 @@
         <%end%>
       </div>
     <%end%>
-      <form id="new_comment_button" action="/answers/<%=answer.id%>/comments" method="get">
+      <form id="new_comment_button" action="/answers/<%=@answer.id%>/comments" method="get">
         <input type="submit" value="add comment">
       </form>
-  <%end%>
 </div>
