--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,6 @@
-/*body{
-  padding:70px;
-}*/
-
 nav{
-  background-color: lightblue;
+  background-color: black;
+  color:white;
   padding: 20px;
   text-align: center;
 }
