--- a/app/views/tags/index.erb
+++ b/app/views/tags/index.erb
@@ -1,5 +1,7 @@
-<h3> Tags </h3>
-<hr>
-<%@tags.each do |tag|%>
-  <div class="tag-buttons"><a href="tags/<%=tag.id%>"><%=tag.name%></a></div>
-<%end%>
+<div id="tags">
+  <h3> Tags </h3>
+
+  <%@tags.each do |tag|%>
+    <div class="tag-buttons"><a href="tags/<%=tag.id%>"><%=tag.name%></a></div>
+  <%end%>
+</div>
